--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="javascript.js"></script>
     <title>Rock ,Paper ,Scissors || by Ayman</title>
 </head>
 <body>
-    <script src="javascript.js">     
-    </script>
+    
 <p></p>
 </body>
 </html>
