--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock ,Paper ,Scissors || by Ayman</title>
-</head>
-<body>
-    <script src="javascript.js">     
-    </script>
-<p></p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <script src="javascript.js" defer></script>
+    <title>Rock Paper Scissors || by Ayman</title>
+  </head>
+  <body>
+    <header>Rock , Paper , Scissors by Ayman</header>
+    <script src="javascript.js"></script>
+    <footer>
+      Made with Love ❤️ ... and Caffeine ☕ |
+      <a href="https://github.com/AymanMain"><img src="github-logo.png" /></a>
+    </footer>
+  </body>
 </html>
